# couchbase-lite-tests

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  ONBOARDING.md  README.md  config.json  pycheck.sh  pyproject.toml  pytest.ini  quick_start_local.py  run_xdcr_tests.py  testserver.schema.json  topology.json  write_xdcr_config.py
client/: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  cli_requirements.txt  pyproject.toml  requirements.txt
client/docs/source/: concepts.rst  conf.py  index.rst  usage.rst
client/docs/source/images/: architecture.puml
client/smoke_tests/: .gitignore  README.md  config_in.json  conftest.py  test_get_root.py  test_listener.py  test_log_endpoint.py  test_logslurp.py  test_multipeer.py  test_new_session.py  test_perform_maintenance.py  test_reset_db.py  test_run_query.py  test_snapshot_verify.py  test_start_replicator.py  test_update_endpoint.py  topology.example.json
client/src/: cli.py
client/src/cbltest/: __init__.py  assertions.py  asyncfile.py  configparser.py  extrapropsparser.py  generate_config.py  globals.py  greenboard_upload.py  greenboarduploader.py  httplog.py  jsonhelper.py  logging.py  request_types.py  requests.py  requests_transport.py  response_types.py  responses.py  update_sgw_config.py  utils.py  version.py  websocket_router.py
client/src/cbltest/api/: cbltestclass.py  cloud.py  couchbaseserver.py  database.py  database_types.py  edgeserver.py  error.py  error_types.py  httpclient.py  json_generator.py  jsongenerator.py  jsonserializable.py  listener.py  multipeer_replicator.py  multipeer_replicator_types.py  remoteshell.py  replicator.py  replicator_types.py  syncgateway.py  syncgatewaycluster.py  test_functions.py  testserver.py  upgrade_test_helpers.py  x509_certificate.py
client/src/cbltest/plugins/: cblpytest_fixture.py  cbse_filter.py  greenboard_fixture.py  required_topology.py  sgcollect_fixture.py  sgcollect_plugin.py  span_generation_fixture.py
client/src/cbltest/v1/: requests.py  responses.py
client/src/cbltest/v2/: requests.py
client/telemetry/: collection.yaml
client/tests/: conftest.py  empty_config.json  test_asyncfile.py  test_cloud.py  test_greenboarduploader.py  test_required_topology.py  test_syncgateway_helpers.py  test_syncgateway_sgcollect.py  test_syncgatewaycluster.py  test_utils.py  test_version_parsing.py
environment/aws/: .gitattributes  .gitignore  .terraform.lock.hcl  README.md  config.json  download_tool.py  main.tf  pyproject.toml  requirements.txt  sg_collect.py  start_backend.py  stop_backend.py
environment/aws/common/: docker.py  io.py  output.py  terraform.py  x509_certificate.py
environment/aws/diagrams/: architecture-1.puml  architecture-2.puml  architecture-3.puml  architecture-4.puml  architecture.puml
environment/aws/es_setup/: Caddyfile  README.md  configure-system.sh  es_config.json  setup_edge_servers.py  start-es.sh
environment/aws/es_setup/config/: config.json
environment/aws/es_setup/shell2http/: add-user.sh  check-log.sh  common.sh  firewall.sh  get-log.sh  reset-db.sh  (+4 more)
environment/aws/lb_setup/: .gitignore  README.md  configure-system.sh  http_config.yml.in  setup_load_balancers.py  traefik.yml
environment/aws/logslurp_setup/: README.md  configure-system.sh  setup_logslurp.py
environment/aws/pulumi/: .gitignore  Pulumi.yaml  __main__.py  constants.py  input_keys.py  output_keys.py  setup.py
environment/aws/server_setup/: README.md  configure-node.sh  configure-system.sh  disable-thp.service  requirements.txt  setup_server.py
environment/aws/sgw_setup/: .gitignore  Caddyfile  README.md  bootstrap-alternate.json  bootstrap.json  configure-system.sh  requirements.txt  setup_sgw.py  start-sgw.sh  start-sgw.sh.in
environment/aws/topology_setup/: README.md  build_test_server.py  cbl_library_downloader.py  default_topology.json  download_test_server.py  setup_topology.py  test_server.py  topology_schema.json
servers/c/: .gitignore  CMakeLists.txt  README.md
servers/c/android/: .gitignore
servers/c/ios/: .gitignore  README.md
servers/c/lib/: README
servers/c/scripts/: build_android.sh  build_ios.sh  build_linux.sh  build_linux_prepare.sh  build_macos.sh  build_win.ps1  build_wins.ps1  dev_prepare.ps1  dev_prepare.sh  download_cbl.ps1  download_cbl.sh  prepare_env.ps1  prepare_env.sh
servers/c/src/: CBLHeader.h  CBLManager.cpp  CBLManager.h  CBLReplicationFilter.cpp  CBLReplicationFilter.h  CollectionSpec.cpp  CollectionSpec.h  Common.h  Dispatcher+Handlers.cpp  Dispatcher.cpp  Dispatcher.h  Request.cpp  Request.h  Session.h  SessionManager.cpp  SessionManager.h  TestServer.cpp  TestServer.h  main.cpp
tests/QE/: conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_db_gone.py  test_db_online_offline.py  test_delta_sync.py  test_high_availability.py  test_large_doc_workloads.py  test_load_balancer.py  test_log_redaction.py  test_multipeer.py  test_multiple_servers.py  test_no_conflicts.py  test_peer_to_peer.py  test_peer_to_peer_topology.py  test_replication_eventing.py  test_replication_functional.py  test_replication_multiple_clients.py  test_replication_upgrade_delta_sync.py  test_replicator_encryption_hook.py  test_rolling_upgrade_sgw.py  test_server_setup.py  test_system.py  test_system_multipeer.py  test_ttl.py  test_upg_sgw.py  test_users_channels.py  test_xattrs.py
tests/QE/edge_server/: jwt_helper.py  test_access_control.py  test_access_control_replication.py  test_authentication.py  test_blipsync_edge_server.py  test_blobs.py  test_changes_feed.py  test_chaos_scenarios.py  test_conflicts.py  test_crud.py  test_database_edge_server.py  test_db_uuid.py  test_end_to_end.py  test_end_to_end_sanity.py  test_jwt_rotation.py  test_jwt_simple.py  test_logging.py  test_performance.py  test_query_edge_server.py  test_replication_edge_server.py  test_replication_sanity.py  test_system.py  test_ttl_expires.py
utils/http_log_helper/: Cargo.toml  README.md
utils/http_log_helper/src/: cat_test.rs  list_tests.rs  main.rs  utils.rs
(+1285 files in other folders)
