[project]
name = "couchbase-lite-tests"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "cbltest",
    "click==8.1.8",
    "paramiko==3.5.0",
    "psutil==7.0.0",
    "pyyaml==6.0.2",
    "tqdm==4.67.1",
]

[tool.ruff]
lint.extend-select = ["I"]
lint.ignore = ["E402"]

[tool.uv.sources]
cbltest = { workspace = true }

[tool.uv.workspace]
members = [ "client" ]

[tool.mypy]
check_untyped_defs = true
exclude = "conftest.py" # Exclude conftest.py, since these are duplicated across several test files

[[tool.mypy.overrides]]
module = "couchbase.*"
ignore_missing_imports = true
