[project]
name = "couchbase-lite-tests"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "cbltest",
    "click==8.1.8",
    "dotnetenv",
    "paramiko==3.5.0",
    "psutil==7.0.0",
    "pyyaml==6.0.2",
    "tenacity==9.1.4",
    "tqdm==4.67.1",
]

[tool.ruff]
lint.extend-select = ["I"]
lint.ignore = ["E402"]
target-version = "py310"
exclude = [".venv", ".vscode", ".idea", ".github", ".git"]


[tool.uv.sources]
cbltest = { workspace = true }
dotnetenv = { index = "cbl-py" }

[[tool.uv.index]]
name = "cbl-py"
url = "https://proget.sc.couchbase.com/pypi/cbl-py/simple"

[dependency-groups]
lint = [
    "ty>=0.0.19",
    "ruff>=0.15.4",
    "types-netifaces==0.11.0.20241025",
]

[tool.uv.workspace]
members = [ "client" ]

[tool.ty.environment]
root = [".", "client/src", "tests"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["tests"]
filterwarnings = [
  "ignore:Class property max_ttl is deprecated.*:couchbase.logic.supportability.CouchbaseDeprecationWarning",
]
markers = [
  "sgw: tests that focus on Sync Gateway functionality",
  "upg_sgw: tests that focus on Sync Gateway upgrade scenario",
  "cbl: tests that focus on Couchbase Lite functionality",
]
