[project]
name = "couchbase-lite-tests"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "cbltest",
    "click==8.1.8",
    "paramiko==3.5.0",
    "psutil==7.0.0",
    "pyyaml==6.0.2",
    "tenacity==9.1.4",
    "tqdm==4.67.1",
]

[tool.ruff]
lint.extend-select = ["I"]
lint.ignore = [
    "E402",
    "BLE001",   # TODO: BLE001 (blind-except) - will fix later
    "S110",     # TODO: S110 (try-except-pass) - will fix later
    "PLW1510",  # TODO: PLW1510 (subprocess-run-without-check) - will fix later
    "TRY002",   # TODO: TRY002 (raise-vanilla-exception) - will fix later
    "TRY201",   # TODO: TRY201 (verbose-raise) - will fix later
    "TRY004",   # TODO: TRY004 (type-check-without-type-error) - will fix later
    "S112",     # TODO: S112 (try-except-continue) - will fix later
    "B023",     # TODO: B023 (function-uses-loop-loopvar) - will fix later
    "LOG015",   # TODO: LOG015 (root-logger-calls) - will fix later
]
target-version = "py310"
exclude = [".venv", ".vscode", ".idea", ".github", ".git"]


[tool.uv.sources]
cbltest = { workspace = true }
dotnetenv = { index = "cbl-py" }

[[tool.uv.index]]
name = "cbl-py"
url = "https://proget.sc.couchbase.com/pypi/cbl-py/simple"
explicit = true

[dependency-groups]
lint = [
    "ty>=0.0.19",
    "ruff>=0.15.4",
    "types-netifaces==0.11.0.20241025",
]
dotnet-build = [
    "dotnetenv",
]

[tool.uv.workspace]
members = [ "client" ]

[tool.ty.environment]
root = [".", "client/src", "tests"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["tests"]
filterwarnings = [
  "ignore:Class property max_ttl is deprecated.*:couchbase.logic.supportability.CouchbaseDeprecationWarning",
]
markers = [
  "sgw: tests that focus on Sync Gateway functionality",
  "upg_sgw: tests that focus on Sync Gateway upgrade scenario",
  "cbl: tests that focus on Couchbase Lite functionality",
]
