[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbltest"
dynamic = ["version"]
authors = [
    { name = "Jim Borden", email = "jim.borden@couchbase.com" }
]
description = "A client for consuming the Couchbase Lite functional testing REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text ="Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console"
]
dependencies = [
    "aiohttp>=3.12.15",
    "bcrypt>=4.3.0",
    "couchbase>=4.4.0",
    "cryptography>=45.0.6",
    "deprecated>=1.2.18",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]

[project.urls]
"Homepage" = "https://github.com/couchbaselabs/couchbase-lite-tests"
"Bug Tracker" = "https://github.com/couchbaselabs/couchbase-lite-tests/issues"

[project.entry-points.pytest11]
required_topology = "cbltest.plugins.required_topology"
cbse_filter = "cbltest.plugins.cbse_filter"
cblpytest_fixture = "cbltest.plugins.cblpytest_fixture"
greenboard_fixture = "cbltest.plugins.greenboard_fixture"
span_generation_fixture = "cbltest.plugins.span_generation_fixture"

[tool.hatch.version]
path = "src/cbltest/version.py"

[tool.hatch.build]
include = [
    "src/cbltest"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/cbltest"
]
