[project]
name = "test-orchestrator"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "netifaces>=0.11.0",
    "paramiko>=4.0.0",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "types-netifaces>=0.11.0.20241025",
    "types-paramiko>=4.0.0.20250806",
    "types-psutil>=7.0.0.20250801",
    "types-tqdm>=4.67.0.20250516",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]

