[package]
edition = "2024"
name = "http_log_helper"
version = "0.1.2"
authors = ["Couchbase, Inc."]
description = "A tool for inspecting http_log folder contents"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.18.3"
tabled = "0.20.0"
walkdir = "2"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
